2008-02-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-02
	* fix bug spotted by Gerry: doFedIdCheck wouldn't be properly
	propageted to FUResource.

2008-02-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-01
	* fix bug spotted by Kurt

2008-01-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-00
	* FUResourceTable::handleErrorEvent() added, used
	FUShmBuffer::writeErrorEventData() to transport raw events
	directamente to the storage manager
	* SMProxy et al include new parameter 'outModId' for the sending of
	regular event data

2008-01-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-08-01
	* remove doublicated publication of 'nbRawCells' parameter to info
	spaces

2007-12-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-08-00
	* based on EventFilter/ShmBuffer V00-05-00
	* add 'watching' workloop: detect dead EP processes and kill EP
	processes if an event is being processed longer than 30s
	* use ShmBuffer process id to account for the number of client EPs
	* add custom webpage which displays client process status and shm
	cell status

2007-11-30  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-07-08
	* bugfix: modify FUResource to produce warning when fedid is 
	not in range, generate error message indicating duplicated fedids

2007-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-07
	* bugfix: lost events (events the total size of which exceed the
	size of a single raw shm cell) are correctly handled now.

2007-09-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-06
	* add parameter 'reasonForFailed'
	* FUResourceTable: throw an exception if the creation of the
	shared memory segment fails
	* therefore, FUResourceBroker now correctly goes to 'FAILED' state
	in this scenario

2007-08-28  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-07-05