@@ -1,3 +1,9 @@
+2008-02-27  Emilio Meschi  <emilio.meschi@cern.ch>
+
+	* tag V00-09-03
+	* introduced boolean parameter to switch off process killing
+	* set application hyperdaq icon to new location
+
 2008-02-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-09-02
